fixed spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,35 @@ body{
     background: white;
     color: #33353a;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    padding-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
+#instructions{
+    background: white;
+    color: #33353a;
+    /*width: 1050px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;*/
+}
+
+#winsandlosses{
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    background: white;
+    color: #33353a;
+    margin-right: 100px;
+    padding-top: 46px;
+    padding-bottom: 46px;
+    padding-left: 40px;
+}
+
+#wins{
+    padding-bottom: 40px;
+}
 
 #counters{
     font-family: 'Poppins', sans-serif;
@@ -34,7 +60,7 @@ body{
 p{
     font-family: 'Arial', sans-serif;
     font-size: 16px;
-    padding-top: 10px;
+    margin-top: 20px;
 }
 
 .crystals{
@@ -46,15 +72,5 @@ p{
     margin-right: 30px;
 }
 
-#winsandlosses{
-    font-family: 'Poppins', sans-serif;
-    font-size: 28px;
-    padding-top: 46px;
-    padding-bottom: 100px;
-    padding-left: 40px;
-    width: 250px;
-}
 
-#wins{
-    padding-bottom: 40px;
-}
+
